--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "gdq-database",
-  "version": "1.0.0",
-  "description": "GDQ Database querying ",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sillypears/gdq-database.git"
-  },
-  "author": "sillypears",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sillypears/gdq-database/issues"
-  },
-  "homepage": "https://github.com/sillypears/gdq-database#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "pug": "^2.0.3",
+    "sqlite3": "^4.0.6"
   }
 }
