--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.0",
     "pm2": "^3.4.0",
     "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0",
     "sqlite3": "^4.0.6"
   }
 }
